# shore

./: Cargo.toml  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: bottles.yml  deploy.yml
Formula/: shore.rb
migrations/: 20240101000001_provider.down.sql  20240101000001_provider.up.sql  20240101000002_model.down.sql  20240101000002_model.up.sql  20240101000003_tool.down.sql  20240101000003_tool.up.sql  20240101000004_chat.down.sql  20240101000004_chat.up.sql  20240101000005_chat_model.down.sql  20240101000005_chat_model.up.sql  20240101000006_chat_message.down.sql  20240101000006_chat_message.up.sql  20240101000007_chat_tool.down.sql  20240101000007_chat_tool.up.sql  20240101000008_chat_profile_tool.down.sql  20240101000008_chat_profile_tool.up.sql  20240101000009_chat_profile_model.down.sql  20240101000009_chat_profile_model.up.sql  20240101000010_fts.down.sql  20240101000010_fts.up.sql  20240101000011_providers_two.down.sql  20240101000011_providers_two.up.sql  20240101000012_providers_three.down.sql  20240101000012_providers_three.up.sql  20240101000013_models_three.down.sql  20240101000013_models_three.up.sql  20240101000014_providers_four_cerebras_openrouter.down.sql  20240101000014_providers_four_cerebras_openrouter.up.sql
src/: app.rs  database.rs  handlers.rs  main.rs  markdown.rs  ui.rs
src/content/docs/: index.mdx
src/content/docs/guides/: example.md
src/model/: chat.rs  mod.rs  model.rs  tool.rs
src/model_select_modal/: event.rs  mod.rs  render.rs
src/provider/: mod.rs  openai_provider.rs  provider.rs
(+7 files in other folders)
