[package]
name = "shore"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

async-trait = "0.1.80"
eyre = "0.6.12"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "migrate"] }
tokio = { version = "1.0", features = ["full"] }

openai-api-rs = "6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Filesystem operations
dirs = "6.0"

# Clipboard support
copypasta = "0.10"

# Text editing widget
edtui = "0.9.6"
futures = "0.3.31"
